[gd_scene load_steps=11 format=3 uid="uid://b7r2yi7d81sgj"]

[ext_resource type="Texture2D" uid="uid://bin10nap8mnxn" path="res://Assets/Sprites/background..png" id="1_aglgo"]
[ext_resource type="Script" path="res://Scripts/Level Scripts/credits.gd" id="1_x8c75"]
[ext_resource type="FontFile" uid="uid://c1526nu7fcgd5" path="res://Assets/Fonts/Komika/KOMIKATR.ttf" id="3_gyqvs"]
[ext_resource type="Theme" uid="uid://bgmhfbp1c0x85" path="res://Assets/Sprites/ButtonTextures.tres" id="4_vqmr1"]
[ext_resource type="Texture2D" uid="uid://crn2god8g6ryh" path="res://Assets/Sprites/menu_buttons1.png" id="5_5yyyj"]
[ext_resource type="Texture2D" uid="uid://bi6pvq2bkf1qe" path="res://Assets/Sprites/menu_buttons2.png" id="6_js47b"]
[ext_resource type="AudioStream" uid="uid://0bgmn3grpphb" path="res://Assets/Sounds/title.mp3" id="7_4r53c"]
[ext_resource type="AudioStream" uid="uid://bd181snopyegr" path="res://Assets/Sounds/button2.mp3" id="8_3dcm1"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_il4u0"]
texture = ExtResource("5_5yyyj")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_r6oj2"]
texture = ExtResource("6_js47b")

[node name="Credits" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x8c75")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(623, 380)
rotation = 1.5708
scale = Vector2(1.31198, 1.31198)
texture = ExtResource("1_aglgo")

[node name="MarginContainer3" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -414.0
offset_right = 1096.0
grow_vertical = 0

[node name="ScoreLabel" type="RichTextLabel" parent="MarginContainer3"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 50
text = "Programming:
	Nae Olson (olso9261@umn.edu)

Art:
	Talon Olson (ols00034@umn.edu)

Sound and Music:
	Aidan Tengowski (tengo003@umn.edu)"
fit_content = true
autowrap_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(100, 200)

[node name="BackButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("4_vqmr1")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_gyqvs")
theme_override_styles/normal = SubResource("StyleBoxTexture_il4u0")
theme_override_styles/hover = SubResource("StyleBoxTexture_r6oj2")
text = "Back"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_4r53c")

[node name="ClickPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_3dcm1")

[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
